--- a/newproject/src/app/components/collapse/collapse.html
+++ b/newproject/src/app/components/collapse/collapse.html
@@ -1,6 +1,10 @@
 <div>
-    <button (click)="toggleIsShown()">Показать</button>
+    <button (click)="toggleIsShown()">
+        {{title}}
+    </button>
     @if(isShown()){
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit perferendis fugit dicta laudantium officiis doloribus voluptatum ut, harum sint aut exercitationem, libero id maxime, vero accusantium impedit quae asperiores? Veniam!</p>
+    <p>
+        {{text}}
+    </p>
     }
 </div>
