--- a/newproject/src/app/app.html
+++ b/newproject/src/app/app.html
@@ -1,2 +1,3 @@
 <app-counter></app-counter>
-<app-collapse></app-collapse>
+<app-collapse title="Как оформить заказ?" text="Выберите товар и добавьте в корзину"></app-collapse>
+<app-collapse title="Часто задаваемые вопросы" text="Какие-то ответы"></app-collapse>
